# rust-proc_macro-training

./: Cargo.toml  readme.md
example/: main.rs  tests.rs
reflection-proc/: Cargo.toml
reflection-proc/src/: lib.rs  reflection.rs  reflection_string.rs  update_with_str.rs
src/: enum_from_strings.rs  fields_from_strings.rs  lib.rs
