[package]
name = "crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.103"

[lib]
name = "utility"
path = "src/lib.rs"
proc-macro = true

[[bin]]
name = "example"
path = "example/main.rs"
